# django-blog

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
core/apps/posts/: admin.py  apps.py  entities.py  exceptions.py  models.py  services.py  urls.py  views.py
core/apps/posts/migrations/: 0001_initial.py  0002_initial.py  0002_post_user.py  0003_post_reputation.py  0004_remove_post_reputation.py  0005_vote.py
core/apps/posts/models/: posts.py  votes.py
core/apps/posts/services/: posts.py  votes.py
core/apps/posts/templates/posts/: post_list.html
core/apps/users/: admin.py  entities.py  forms.py  models.py  urls.py  views.py
core/apps/users/migrations/: 0001_initial.py  0002_remove_customuser_karma.py
core/project/: settings.py  urls.py
core/static/css/: styles.css
core/templates/: 400.html  403.html  404.html  base.html
core/templates/posts/: create_post.html  post_detail.html  post_feed.html  post_item.html  posts_by_user.html  update.html
core/templates/users/: create_user.html  login.html  profile.html  signup.html
docker_compose/: app.yaml  storages.yaml
